# Marika

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  readme.md
dependencies/imgui/: imconfig.h
dependencies/imgui/examples/example_win32_directx11/: Menu.cpp  Menu.h  main.cpp
dependencies/ini/: ini.h
dependencies/stb_image/: stb_image.h
src/: main.cpp
src/BaseUI/: BaseUI.cpp  BaseUI.h
src/Utils/: Console.cpp  Console.h  DeltaTime.cpp  DeltaTime.h  DllWriter.h  Launcher.h  ModEngineTools.h  SteamUtils.h  StringUtils.cpp  StringUtils.h
src/engine/: Layer.h
src/engine/Buffer/: Buffer.h
src/engine/GUI/: ApplicationGUI.cpp  ApplicationGUI.h  Image.cpp  Image.h
src/engine/GUI/ImGuiTheme/: ImGuiTheme.cpp  ImGuiTheme.h
src/engine/GUI/Images/: logo.h  windowIcons.h
src/engine/GUI/UI/: UI.cpp  UI.h
src/engine/Serialization/: BufferStream.cpp  BufferStream.h  FileStream.cpp  FileStream.h  StreamReader.cpp  StreamReader.h  StreamWriter.cpp  StreamWriter.h
src/files/: OnlineFixIni.h  steam_api64_official.hpp
